2004-01-27  Lluis Sanchez Gual <lluis@ximian.com>

	* ContextBoundObject.cs: Removed TODO.

2004-01-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TimeSpan.cs: fixed bug #52075. Days (int) don't rely on TotalDays
	(double), which might round up.

2004-01-19  Jackson Harper <jackson@ximian.com>

	* FloatingPointFormatter.cs: Use the default decimal digits count
	if they are not specified. This fixes bug #52927.
	
2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump version number.

2004-01-19  Lluis Sanchez Gual  <lluis@ximian.com>

	* Type.cs: Added internal call for IsInstanceOfType. The old implementation
	uses IsAssignableFrom(o.GetType()), which is not always valid for 
	transparent proxies (because GetType will not return the type of the remote
	object if its assembly is not present).

2004-01-18  David Sheldon <dave-mono@earth.li>

  * FloatingPointFormatter.cs: Skip the decimal point if we have an 
    integer mantassa. So: 1E+15, rather than 1.E+15.

2004-01-18  David Sheldon <dave-mono@earth.li>

	* Array.cs (GetValue/SetValue): Throw NullRef exception like .NET 1.1, 
	even though docs say it should be an ArgumentNull. Two test cases now
  pass. See also nickd's commit of 2003-12-24.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Environment.cs: increased corlib version.

2004-01-14  Lluis Sanchez Gual <lluis@ximian.com>

	* MonoCustomAttrs.cs: Removed attribute cache. Attribute instances can't
	be reused because they could be modified. This fixes bug #52655.

2004-01-12  Patrik Torstensson

	* Environment.cs: Bump corlib version number due to new StringBuilder
	
	* String.cs: New internal method to support the new StringBuilder that
	uses the string as a buffer (until ToString is called)

2004-01-12  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump corlib version number for real this time.
	
	* AppDomain.cs (LoadAssembly): Pass the assembly name as a string to