@@ -1,3 +1,9 @@
+2004-01-27  Sebastien Pouliot  <spouliot@videotron.ca>
+
+	* Exception.cs: Changed ToString to remove the \n when no stack trace
+	is present (which fixed a unit test for SecurityException). Changed
+	all \n to Environment.NewLine.
+
 2004-01-27  Lluis Sanchez Gual <lluis@ximian.com>
 
 	* ContextBoundObject.cs: Removed TODO.
